# Observal-Flare

./: .env.example  .gitignore  Dockerfile.api  aws-features-plan.md  docker-compose.prod.yml  docker-compose.yml  flare-plan.md  gcp-plan.md  websocket-plan.md
infra/site-gcp/: dns.tf  firewall.tf  iam.tf  main.tf  outputs.tf  (+1 more)
scripts/: api-entrypoint.sh  backup-db.sh  deploy-site.sh  setup-flare.sh
server/: alembic.ini  compute.py  config.py  database.py  ec2.py  events.py  gcp_compute.py  gcp_remote.py  gcp_terraform.py  main.py  mock.py  provisioner.py  pyproject.toml  ssm.py  terraform.py
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_add_cloud_provider.py
server/api/: audit_logs.py  auth.py  costs.py  deploy_sources.py  deps.py  env_vars.py  health.py  invites.py  sites.py  webhooks.py  ws.py
server/models/: __init__.py  audit_log.py  invite.py  site.py  user.py
server/notifications/: email.py
server/notifications/templates/: site_destroyed.html  site_failed.html  site_pr_closed.html  site_ready.html  site_ready_after_wipe.html  site_stale.html  site_ttl_expiring.html
server/services/: github_service.py  invite_service.py  site_service.py
server/tests/: conftest.py  test_audit_logs.py  test_auth_roles.py  test_costs.py  test_crons.py  test_deploy_source.py  test_events.py  test_force_unlock.py  test_invites.py  test_provisioner.py  test_site_validation.py  test_webhooks.py  test_websocket.py
server/worker/: settings.py  tasks.py
templates/: env.template
web/: Dockerfile.prod  package.json  tsconfig.tsbuildinfo
(+29 files in other folders)
